<resources>
    <string name="app_name">Zubiissenger</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="welcome_text">Welcome To \nZubiissenger</string>
    <string name="userName_text">Email</string>
    <string name="password_text">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_friend">Add new friend</string>
</resources>